--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,7 @@
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
-            "php artisan clear-compiled",
+            "php artisan optimize",
             "chmod -R 777 public/"
         ],
         "post-update-cmd": [
